--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -298,12 +298,12 @@ fail_request:
 大概总结一下:
 
 1. 注册了一段IO，用来接收客户机的读写请求。
-2. 创建一个
+2. 创建了一个worker(内核线程)和work(工作), 用来向客户机注入时钟中断
+3. 注册一个高精度定时器, 作为**时钟中断**的**中断源**(触发源)
+
+从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
 初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断
-
-
-
 
 内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
