--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -99,10 +99,14 @@ struct kvm_kpit_channel_state {
 
 struct kvm_kpit_state {
         /* All members before "struct mutex lock" are protected by the lock. */
+        // pit的3个通道
         struct kvm_kpit_channel_state channels[3];
         u32 flags;
+        // 是否周期性触发
         bool is_periodic;
+        // 触发周期, 即超时时间
         s64 period;                             /* unit: ns */
+        // 对应的hrtimer定时器
         struct hrtimer timer;
         u32    speaker_data_on;
 
@@ -253,7 +257,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         // 时钟中断ack模拟函数
         pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;
         pit->mask_notifier.func = pit_mask_notifer;
-
+        // 重置pit, 会启用定时器
         kvm_pit_reset(pit);
 
         kvm_pit_set_reinject(pit, true);
@@ -299,13 +303,13 @@ fail_request:
 
 1. 注册了一段IO，用来接收客户机的读写请求。
 2. 创建了一个worker(内核线程)和work(工作), 用来向客户机注入时钟中断
-3. 注册一个高精度定时器, 作为**时钟中断**的**中断源**(触发源)
+3. 注册一个**高精度定时器**并启用它, 作为**时钟中断**的**中断源**(触发源), 定时器的真实物理时钟源根据不同的硬件而不同
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
 初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断
 
-内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
+所以内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
 hrtimer为高精度定时器，管理机制为: 
 - 传统的低精度的为时间轮方案；
@@ -320,6 +324,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         struct kvm_kpit_channel_state *c;
 
         pit->pit_state.flags = 0;
+        // 3个通道
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
                 c->mode = 0xff;
@@ -361,10 +366,12 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
         case 1:
         /* FIXME: enhance mode 4 precision */
         case 4:
+                // 单次触发
                 create_pit_timer(pit, val, 0);
                 break;
         case 2:
         case 3:
+                // 周期性触发
                 create_pit_timer(pit, val, 1);
                 break;
         default:
@@ -383,15 +390,18 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
         if (!ioapic_in_kernel(kvm) ||
             ps->flags & KVM_PIT_FLAGS_HPET_LEGACY)
                 return;
-
+        // 间隔时间, 定时器超时时间
         interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ);
 
         pr_debug("create pit timer, interval is %llu nsec\n", interval);
 
         /* TODO The new value only affected after the retriggered */
+        // 取消之前的定时器
         hrtimer_cancel(&ps->timer);
         kthread_flush_work(&pit->expired);
+        // 设置定时器的超时时间
         ps->period = interval;
+        // 是否周期触发
         ps->is_periodic = is_period;
 
         kvm_pit_reset_reinject(pit);
@@ -412,7 +422,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
                         ps->period = min_period;
                 }
         }
-
+        /*创建真正的高精准时钟*/
         hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval),
                       HRTIMER_MODE_ABS);
 }
