--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -172,10 +172,10 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_pit_reset(pit); // 
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
- |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 获取时间, 直接返回
- |   |   |   |   └─ create_pit_timer();
+ |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   |   |   └─ create_pit_timer(); // 创建pit定时器
  |   |   |   |       ├─ interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 间隔时间
- |   |   |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 
+ |   |   |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启动定时器
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -361,6 +361,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 
         /* Two types of timer
          * mode 1 is one shot, mode 2 is period, otherwise del timer */
+        // 通道0的mode
         switch (ps->channels[0].mode) {
         case 0:
         case 1:
@@ -375,6 +376,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
                 create_pit_timer(pit, val, 1);
                 break;
         default:
+                // 删除定时器
                 destroy_pit_timer(pit);
         }
 }
@@ -422,11 +424,13 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
                         ps->period = min_period;
                 }
         }
-        /*创建真正的高精准时钟*/
+        /*启用真正的高精准时钟*/
         hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval),
                       HRTIMER_MODE_ABS);
 }
 ```
+
+1. 根据
 
 ### 5.5. pit_timer_fn(): 中断流程
 
