--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -124,6 +124,7 @@ struct kvm_pit {
         struct kvm_io_device speaker_dev;
         // 所属的虚拟机
         struct kvm *kvm;
+        // 内核pit信息域
         struct kvm_kpit_state pit_state;
         int irq_source_id;
         struct kvm_irq_mask_notifier mask_notifier;
@@ -144,6 +145,8 @@ hrtimer，不是时钟源，只是一种高精准软件时钟计算方法，Linu
 
 ## 5. 初始化虚拟PIT
 
+真实物理pit有3个通道, 虚拟的PIT其实也是要符合这个设定, 进行全功能模拟, 所以一定要先看下PIT的功能描述.
+
 ### 5.1. QEMU
 
 PIT创建:
@@ -161,7 +164,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  ├─  kvm_arch_vm_ioctl()     
  |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
- |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
+ |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 分配irq source id
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
  |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建work内核线程
  |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
@@ -169,7 +172,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
  |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
- |   |   ├─ kvm_pit_reset(pit); // 
+ |   |   ├─ kvm_pit_reset(pit); // 重置pit, 会创建pit定时器
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
@@ -227,6 +230,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         if (!pit)
                 return NULL;
         // 返回kvm中irq_sources_bitmap中没有被占用的第一位，作为irq_source_id
+        // 分配irq id
         pit->irq_source_id = kvm_request_irq_source_id(kvm);
         if (pit->irq_source_id < 0)
                 goto fail_request;
@@ -247,7 +251,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         pit->kvm = kvm;
 
         pit_state = &pit->pit_state;
-        // 初始化hrtimer, 这个高精准定时器就作为虚拟时钟的时钟源
+        // 初始化hrtimer, 这个高精准定时器就作为虚拟PIT时钟的时钟源
         // 然而定时器的真实物理时钟源根据不同的硬件而不同
         hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
         // hrtimer的中断处理函数
@@ -307,9 +311,9 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断
+初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断, 这个是符合物理真实pit功能的
 
-所以内核虚拟PIT实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
+所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
 hrtimer为高精度定时器，管理机制为: 
 - 传统的低精度的为时间轮方案；
