--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -106,7 +106,7 @@ struct kvm_kpit_state {
         bool is_periodic;
         // 触发周期, 即超时时间
         s64 period;                             /* unit: ns */
-        // 对应的hrtimer定时器
+        // pit对应的hrtimer定时器
         struct hrtimer timer;
         u32    speaker_data_on;
 
@@ -130,7 +130,7 @@ struct kvm_pit {
         struct kvm_irq_mask_notifier mask_notifier;
         // 工作worker, 一个内核线程
         struct kthread_worker *worker;
-        // work, 工作
+        // 超时work, 工作
         struct kthread_work expired;
 };
 ```
@@ -249,7 +249,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         kthread_init_work(&pit->expired, pit_do_work);
         // pit所属的虚拟机
         pit->kvm = kvm;
-
+        // pit的信息域
         pit_state = &pit->pit_state;
         // 初始化hrtimer, 这个高精准定时器就作为虚拟PIT时钟的时钟源
         // 然而定时器的真实物理时钟源根据不同的硬件而不同
@@ -306,7 +306,7 @@ fail_request:
 大概总结一下:
 
 1. 注册了一段IO，用来接收客户机的读写请求。
-2. 创建了一个worker(内核线程)和work(工作), 用来向客户机注入时钟中断
+2. 给pit创建了一个worker(内核线程)和超时work(工作), 用来向客户机注入时钟中断
 3. 注册一个**高精度定时器**并启用它, 作为**时钟中断**的**中断源**(触发源), 定时器的真实物理时钟源根据不同的硬件而不同
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
@@ -332,7 +332,9 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
                 c->mode = 0xff;
+                // true, true, false
                 c->gate = (i != 2);
+                // val是0
                 pit_load_count(pit, i, 0);
         }
 
@@ -355,10 +357,11 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
          */
         if (val == 0)
                 val = 0x10000;
-
+        // 通道计数为0
         ps->channels[channel].count = val;
-
+        // 非 0 通道
         if (channel != 0) {
+                // 
                 ps->channels[channel].count_load_time = ktime_get();
                 return;
         }
