--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -331,6 +331,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         // 3个通道
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
+                // disable timer
                 c->mode = 0xff;
                 // true, true, false
                 c->gate = (i != 2);
@@ -359,16 +360,16 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
                 val = 0x10000;
         // 通道计数为0
         ps->channels[channel].count = val;
-        // 非 0 通道
+        // 非 0 通道, 返回
         if (channel != 0) {
-                // 
+                // 获取系统启动以来所经过的时间，不包含休眠时间
                 ps->channels[channel].count_load_time = ktime_get();
                 return;
         }
-
+        // 往下都是通道0
         /* Two types of timer
          * mode 1 is one shot, mode 2 is period, otherwise del timer */
-        // 通道0的mode
+        // 通道0的mode, 这里是0xff
         switch (ps->channels[0].mode) {
         case 0:
         case 1:
@@ -390,6 +391,8 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 ```
 
 ```cpp
+#define NSEC_PER_SEC 1000000000L
+
 static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 {
         struct kvm_kpit_state *ps = &pit->pit_state;
