--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -104,7 +104,7 @@ struct kvm_kpit_state {
         u32 flags;
         // 是否周期性触发
         bool is_periodic;
-        // 触发周期, 即超时时间
+        // 触发周期, 即超时时间, 单位是 ns
         s64 period;                             /* unit: ns */
         // pit对应的hrtimer定时器
         struct hrtimer timer;
@@ -331,7 +331,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         // 3个通道
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
-                // disable timer
+                // disable timer, 清理这三个通道的
                 c->mode = 0xff;
                 // true, true, false
                 c->gate = (i != 2);
@@ -358,7 +358,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
          */
         if (val == 0)
                 val = 0x10000;
-        // 通道计数为0
+        // 通道计数为 0x10000
         ps->channels[channel].count = val;
         // 非 0 通道, 返回
         if (channel != 0) {
@@ -392,6 +392,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
+#define KVM_PIT_FREQ 1193181
 
 static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 {
@@ -403,6 +404,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
             ps->flags & KVM_PIT_FLAGS_HPET_LEGACY)
                 return;
         // 间隔时间, 定时器超时时间
+        // 这里 val 是 0x10000
         interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ);
 
         pr_debug("create pit timer, interval is %llu nsec\n", interval);
