--- Auto-Git Commit ---

--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -417,3 +417,5 @@ void hrtimer_interrupt(struct clock_event_device *dev)
 # 6. 参考
 
 https://blog.csdn.net/droidphone/article/details/8074892
+
+https://blog.csdn.net/walkingman321/article/details/6133171 (未整理)
