--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -176,9 +176,9 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   |   |   └─ create_pit_timer(); // 创建pit定时器
- |   |   |   |       ├─ interval = mul_u64_u32_div(val, NSEC_PER_SEC, KVM_PIT_FREQ); // 间隔时间
- |   |   |   |       └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启动定时器
+ |   |   |   |   └─ destroy_pit_timer(); // 是timer无效
+ |   |   |   |       ├─ hrtimer_cancel(); // 删除一个正在排队定时器
+ |   |   |   |       └─ kthread_flush_work(); // 
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -315,9 +315,7 @@ fail_request:
 
 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
-hrtimer为高精度定时器，管理机制为: 
-- 传统的低精度的为时间轮方案；
-- 高精度方案为红黑树管理方案；
+传统的低精度的为时间轮方案; hrtimer为高精度定时器，管理机制为红黑树管理方案；
 
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
 
@@ -331,7 +329,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
         // 3个通道
         for (i = 0; i < 3; i++) {
                 c = &pit->pit_state.channels[i];
-                // disable timer, 清理这三个通道的
+                // disable timer, 不会启用timer
                 c->mode = 0xff;
                 // true, true, false
                 c->gate = (i != 2);
@@ -370,6 +368,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
         /* Two types of timer
          * mode 1 is one shot, mode 2 is period, otherwise del timer */
         // 通道0的mode, 这里是0xff
+        // 注意, 这里没有调用创建定时器
         switch (ps->channels[0].mode) {
         case 0:
         case 1:
@@ -384,10 +383,14 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
                 create_pit_timer(pit, val, 1);
                 break;
         default:
-                // 删除定时器
+                // 这里走的是这个流程, 删除定时器
                 destroy_pit_timer(pit);
         }
 }
+```
+
+```cpp
+
 ```
 
 ```cpp
