--- a/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
+++ b/Linux/Time/Linux时间子系统/6. 高精度定时器(HRTIMER)的原理和实现.md
@@ -26,7 +26,11 @@
 
 * 低分辨率定时器几乎是为“超时”而设计的，并为此对它进行了大量的优化，对于这些以“超时”未目的而使用定时器，它们大多数期望在超时到来之前获得正确的结果，然后删除定时器，精确时间并不是它们主要的目的，例如网络通信、设备IO等等。
 
-为此，内核为高精度定时器重新设计了一套软件架构，它可以为我们提供纳秒级的定时精度，以满足对精确时间有迫切需求的应用程序或内核驱动，例如多媒体应用，音频设备的驱动程序等等。以下的讨论用hrtimer(high resolution timer)表示高精度定时器。
+为此，内核为高精度定时器重新设计了一套软件架构，它可以为我们提供纳秒级的定时精度，以满足对精确时间有迫切需求的应用程序或内核驱动，例如多媒体应用，音频设备的驱动程序等等。
+
+以下的讨论用hrtimer(high resolution timer)表示高精度定时器。
+
+可作为超时或周期性定时器使用
 
 # 2. 如何组织hrtimer?
 
