--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -139,6 +139,8 @@ struct kvm_pit {
 
 hrtimer，不是时钟源，只是一种高精准软件时钟计算方法，Linux现在一般时钟这个来计算ticker。
 
+可作为**超时**或**周期性定时器**使用
+
 注: 不仅仅是kvm使用
 
 详细参见`Linux/Time`
@@ -307,17 +309,23 @@ fail_request:
 
 1. 注册了一段IO，用来接收客户机的读写请求。
 2. 给pit创建了一个worker(内核线程)和超时work(工作), 用来向客户机注入时钟中断
-3. 注册一个**高精度定时器**并启用它, 作为**时钟中断**的**中断源**(触发源), 定时器的真实物理时钟源根据不同的硬件而不同
+3. 注册一个**高精度定时器**, 作为**时钟中断**的**中断源**(触发源), 定时器的真实物理时钟源根据不同的硬件而不同
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-初始化**hrtimer**，hrtimer中断处理函数为`pit_timer_fn`，hrtimer的启动在`kvm_pit_reset`里，每个1ms产生一次中断, 这个是符合物理真实pit功能的
+```cpp
+hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
+pit_state->timer.function = pit_timer_fn;
+```
 
-所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
+- 初始化**hrtimer**，初始化工作模式, 
+- 设置hrtimer中断处理函数为`pit_timer_fn`，注意该回调函数为原子操作不能被中断
+
+注: 这里没有启用hrtimer(`hrtimer_start`), 而且其实整个创建流程都没有启用hrtimer
+
+由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
 传统的低精度的为时间轮方案; hrtimer为高精度定时器，管理机制为红黑树管理方案；
-
-此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -390,8 +398,21 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 ```
 
 ```cpp
-
+static void destroy_pit_timer(struct kvm_pit *pit)
+{
+        // 删除定时器
+        hrtimer_cancel(&pit->pit_state.timer);
+        kthread_flush_work(&pit->expired);
+}
 ```
+
+`hrtimer_cancel`函数的作用是**删除一个正在排队的定时器**。这里分三种情况，一种是定时器**已到期**，并且设置了软中断模式；第二种是没有到期，还在红黑树中；第三种是定时器正在执行。
+
+- 第一种情况，定时器被挂在`hrtimer_cpu_base`的`cb_pending`队列中，所以需要把它从pending队列中移出。
+
+- 第二种情况，定时器还在红黑树中，那么把它**从红黑树中移出**。由于本文暂时只考虑高精度没有打开的情况，所以先不研究定时器正好排在红黑树第一个时的情况（即代码中调用hrtimer_force_reprogram函数的部分）。
+
+- 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
