--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -137,11 +137,19 @@ struct kvm_pit {
 
 ### struct hrtimer
 
-hrtimer，不是时钟源，只是一种高精准软件时钟计算方法，Linux现在一般时钟这个来计算ticker。
+hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Linux一般用这个来计算ticker, 定时器的真实物理时钟源根据不同的硬件而不同
 
-可作为**超时**或**周期性定时器**使用
+可作为超时或周期性定时器使用
+
+传统的低精度的为时间轮方案; hrtimer为高精度定时器，管理机制为红黑树管理方案；
 
 注: 不仅仅是kvm使用
+
+主要涉及接口:
+
+1. hrtimer_init(): 初始化定时器, 设置工作模式
+2. hrtimer_start(): 启用一个定时器, 第二个参数用于设置超时参数
+3. hrtimer_cancel(): 取消一个定时器
 
 详细参见`Linux/Time`
 
@@ -263,7 +271,7 @@ struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
         // 时钟中断ack模拟函数
         pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;
         pit->mask_notifier.func = pit_mask_notifer;
-        // 重置pit, 会启用定时器
+        // 重置pit, 这里面不会启用hrtimer
         kvm_pit_reset(pit);
 
         kvm_pit_set_reinject(pit, true);
@@ -324,8 +332,6 @@ pit_state->timer.function = pit_timer_fn;
 注: 这里没有启用hrtimer(`hrtimer_start`), 而且其实整个创建流程都没有启用hrtimer
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
-
-传统的低精度的为时间轮方案; hrtimer为高精度定时器，管理机制为红黑树管理方案；
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
