--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -188,7 +188,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   |   |   └─ destroy_pit_timer(); // 是timer无效
  |   |   |   |       ├─ hrtimer_cancel(); // 删除一个正在排队定时器
- |   |   |   |       └─ kthread_flush_work(); // 
+ |   |   |   |       └─ kthread_flush_work(); // 清除pit->expired的work(工作)
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -320,6 +320,19 @@ fail_request:
 3. 注册一个**高精度定时器**, 作为**时钟中断**的**中断源**(触发源), 定时器的真实物理时钟源根据不同的硬件而不同
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
+
+主要函数有3个:
+- `pool->worker = kthread_create_worker()`: 
+创建一个worker, 其实就是创建一个内核线程并唤醒
+- `kthread_init_work(&pool->work, work_func);`: 创建一个work, 工作函数是`work_func`
+- `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
+
+```cpp
+pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
+kthread_init_work(&pit->expired, pit_do_work);
+```
+
+这里调用了前两步, 还没开始让worker工作
 
 ```cpp
 hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
