--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -10,14 +10,18 @@
 - [3. PIT(8254)模拟](#3-pit8254模拟)
   - [3.1. 相关结构体](#31-相关结构体)
     - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
-    - [struct hrtimer](#struct-hrtimer)
-  - [5. 初始化虚拟PIT](#5-初始化虚拟pit)
-    - [5.1. QEMU](#51-qemu)
-    - [5.2. 整体流程](#52-整体流程)
-    - [5.3. 入口代码](#53-入口代码)
-    - [5.4. kvm_create_pit(): 创建pit(8254)](#54-kvm_create_pit-创建pit8254)
-    - [5.5. pit_timer_fn(): 中断流程](#55-pit_timer_fn-中断流程)
-- [6. 参考](#6-参考)
+    - [3.1.2. struct hrtimer](#312-struct-hrtimer)
+  - [3.2. 初始化虚拟PIT](#32-初始化虚拟pit)
+    - [3.2.1. QEMU](#321-qemu)
+    - [3.2.2. 整体流程](#322-整体流程)
+    - [3.2.3. 入口代码](#323-入口代码)
+    - [3.2.4. kvm_create_pit(): 创建pit(8254)](#324-kvm_create_pit-创建pit8254)
+      - [3.2.4.1. 创建work: 向客户机注入时钟中断](#3241-创建work-向客户机注入时钟中断)
+      - [3.2.4.2. 创建定时器](#3242-创建定时器)
+      - [3.2.4.3. 重置pit](#3243-重置pit)
+- [4. 创建定时器](#4-创建定时器)
+    - [4.1. pit_timer_fn(): 中断流程](#41-pit_timer_fn-中断流程)
+- [5. 参考](#5-参考)
 
 <!-- /code_chunk_output -->
 
@@ -135,7 +139,7 @@ struct kvm_pit {
 };
 ```
 
-### struct hrtimer
+### 3.1.2. struct hrtimer
 
 hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Linux一般用这个来计算ticker, 定时器的真实物理时钟源根据不同的硬件而不同
 
@@ -153,11 +157,11 @@ hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Lin
 
 详细参见`Linux/Time`
 
-## 5. 初始化虚拟PIT
+## 3.2. 初始化虚拟PIT
 
 真实物理pit有3个通道, 虚拟的PIT其实也是要符合这个设定, 进行全功能模拟, 所以一定要先看下PIT的功能描述.
 
-### 5.1. QEMU
+### 3.2.1. QEMU
 
 PIT创建:
 
@@ -167,7 +171,7 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-### 5.2. 整体流程
+### 3.2.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -195,10 +199,10 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
  |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
  |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker 设备的操作注册
- |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 
+ |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
 ```
 
-### 5.3. 入口代码
+### 3.2.3. 入口代码
 
 ```cpp
 case KVM_CREATE_PIT:
@@ -225,7 +229,7 @@ create_pit_unlock:
 
 创建pit并赋值给 `kvm->arch.vpit`
 
-### 5.4. kvm_create_pit(): 创建pit(8254)
+### 3.2.4. kvm_create_pit(): 创建pit(8254)
 
 ```cpp
 struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
@@ -321,11 +325,15 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-主要函数有3个:
+#### 3.2.4.1. 创建work: 向客户机注入时钟中断
+
+worker主要函数有3个:
 - `pool->worker = kthread_create_worker()`: 
 创建一个worker, 其实就是创建一个内核线程并唤醒
 - `kthread_init_work(&pool->work, work_func);`: 创建一个work, 工作函数是`work_func`
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
+
+#### 3.2.4.2. 创建定时器
 
 ```cpp
 pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
@@ -345,6 +353,8 @@ pit_state->timer.function = pit_timer_fn;
 注: 这里没有启用hrtimer(`hrtimer_start`), 而且其实整个创建流程都没有启用hrtimer
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
+
+#### 3.2.4.3. 重置pit
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -368,7 +378,7 @@ static void kvm_pit_reset(struct kvm_pit *pit)
 }
 ```
 
-
+调用`pit_load_count()`, 注意这里面没有启用定时器, 反而清理了这个定时器
 
 ```cpp
 static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
@@ -421,6 +431,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 {
         // 删除定时器
         hrtimer_cancel(&pit->pit_state.timer);
+        // 清理work
         kthread_flush_work(&pit->expired);
 }
 ```
@@ -432,6 +443,12 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 - 第二种情况，定时器还在红黑树中，那么把它**从红黑树中移出**。由于本文暂时只考虑高精度没有打开的情况，所以先不研究定时器正好排在红黑树第一个时的情况（即代码中调用hrtimer_force_reprogram函数的部分）。
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
+
+# 4. 创建定时器
+
+
+每个1ms产生一次中断, 这个是符合物理真实pit功能的
+此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
 
 ```cpp
 #define NSEC_PER_SEC 1000000000L
@@ -455,6 +472,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
         /* TODO The new value only affected after the retriggered */
         // 取消之前的定时器
         hrtimer_cancel(&ps->timer);
+        // 清理超时的work
         kthread_flush_work(&pit->expired);
         // 设置定时器的超时时间
         ps->period = interval;
@@ -487,7 +505,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 1. 根据
 
-### 5.5. pit_timer_fn(): 中断流程
+### 4.1. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
@@ -549,5 +567,5 @@ static void pit_do_work(struct kthread_work *work)
 
 
 
-# 6. 参考
+# 5. 参考
 
