--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -16,7 +16,7 @@
     - [3.2.2. 整体流程](#322-整体流程)
     - [3.2.3. 入口代码](#323-入口代码)
     - [3.2.4. kvm_create_pit(): 创建pit(8254)](#324-kvm_create_pit-创建pit8254)
-      - [3.2.4.1. 创建work: 向客户机注入时钟中断](#3241-创建work-向客户机注入时钟中断)
+      - [3.2.4.1. 创建work](#3241-创建work)
       - [3.2.4.2. 创建定时器](#3242-创建定时器)
       - [3.2.4.3. 重置pit](#3243-重置pit)
 - [4. 创建定时器](#4-创建定时器)
@@ -190,8 +190,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
  |   |   |   ├─ pit_load_count(pit, i, 0); // 
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
- |   |   |   |   └─ destroy_pit_timer(); // 是timer无效
- |   |   |   |       ├─ hrtimer_cancel(); // 删除一个正在排队定时器
+ |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
+ |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
  |   |   |   |       └─ kthread_flush_work(); // 清除pit->expired的work(工作)
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
@@ -325,7 +325,9 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-#### 3.2.4.1. 创建work: 向客户机注入时钟中断
+#### 3.2.4.1. 创建work
+
+这里的用于向客户机注入时钟中断
 
 worker主要函数有3个:
 - `pool->worker = kthread_create_worker()`: 
@@ -339,6 +341,7 @@ worker主要函数有3个:
 pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
 kthread_init_work(&pit->expired, pit_do_work);
 ```
+初始化一个高精准定时器，这个定时器就作为我们虚拟时钟的时钟源, 然而定时器的物理时钟源根据不同的硬件而不同
 
 这里调用了前两步, 还没开始让worker工作
 
@@ -420,7 +423,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
                 create_pit_timer(pit, val, 1);
                 break;
         default:
-                // 这里走的是这个流程, 删除定时器
+                // 这里走的是这个流程, 取消定时器
                 destroy_pit_timer(pit);
         }
 }
@@ -429,7 +432,7 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 ```cpp
 static void destroy_pit_timer(struct kvm_pit *pit)
 {
-        // 删除定时器
+        // 去掉定时器, 定时器对象没有删除
         hrtimer_cancel(&pit->pit_state.timer);
         // 清理work
         kthread_flush_work(&pit->expired);
@@ -446,6 +449,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 # 4. 创建定时器
 
+为什么会创建定时器，那是因为**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器。那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
 每个1ms产生一次中断, 这个是符合物理真实pit功能的
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
