--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -16,8 +16,8 @@
     - [3.2.2. 整体流程](#322-整体流程)
     - [3.2.3. 入口代码](#323-入口代码)
     - [3.2.4. kvm_create_pit(): 创建pit(8254)](#324-kvm_create_pit-创建pit8254)
-      - [3.2.4.1. 创建work](#3241-创建work)
-      - [3.2.4.2. 创建定时器](#3242-创建定时器)
+      - [3.2.4.1. 初始化PIT的worker和work](#3241-初始化pit的worker和work)
+      - [3.2.4.2. 初始化PIT的定时器](#3242-初始化pit的定时器)
       - [3.2.4.3. 重置pit](#3243-重置pit)
 - [4. 创建定时器](#4-创建定时器)
     - [4.1. pit_timer_fn(): 中断流程](#41-pit_timer_fn-中断流程)
@@ -151,9 +151,9 @@ hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Lin
 
 主要涉及接口:
 
-1. hrtimer_init(): 初始化定时器, 设置工作模式
-2. hrtimer_start(): 启用一个定时器, 第二个参数用于设置超时参数
-3. hrtimer_cancel(): 取消一个定时器
+1. `hrtimer_init()`: 初始化定时器, 设置工作模式
+2. `hrtimer_start()`: 启用一个定时器, 第二个参数用于设置超时参数
+3. `hrtimer_cancel()`: 取消一个定时器
 
 详细参见`Linux/Time`
 
@@ -180,8 +180,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
  |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 分配irq source id
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
- |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建work内核线程
- |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 这个 pit_do_work 是一个函数，用来向客户机注入时钟中断
+ |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建PIT的worker内核线程
+ |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 超时work, pit_do_work用来向客户机注入时钟中断
  |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
  |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
  |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
@@ -192,7 +192,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
  |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
  |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
- |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成
+ |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
  |   |   |   ├─ } // 循环3次
  |   |   |   └─ kvm_pit_reset_reinject(pit); // 
  |   |   ├─ kvm_pit_set_reinject(pit, true); // 
@@ -325,9 +325,14 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-#### 3.2.4.1. 创建work
+#### 3.2.4.1. 初始化PIT的worker和work
 
-这里的用于向客户机注入时钟中断
+```cpp
+pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
+kthread_init_work(&pit->expired, pit_do_work);
+```
+
+先给PIT创建了worker(内核线程); 然后初始化了一个work(工作), 用于向客户机注入时钟中断
 
 worker主要函数有3个:
 - `pool->worker = kthread_create_worker()`: 
@@ -336,22 +341,18 @@ worker主要函数有3个:
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
 - `kthread_flush_work()`: 用来在最后要停止worker的处理线程之前,保证所有的work都已经处理了
 
-#### 3.2.4.2. 创建定时器
+#### 3.2.4.2. 初始化PIT的定时器
 
-```cpp
-pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
-kthread_init_work(&pit->expired, pit_do_work);
-```
-初始化一个高精准定时器，这个定时器就作为我们虚拟时钟的时钟源, 然而定时器的物理时钟源根据不同的硬件而不同
-
-这里调用了前两步, 还没开始让worker工作
+初始化一个高精准定时器，这个定时器就作为我们**虚拟时钟的时钟源**, 然而定时器的物理时钟源根据不同的硬件而不同
 
 ```cpp
 hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
 pit_state->timer.function = pit_timer_fn;
 ```
 
-- 初始化**hrtimer**，初始化工作模式, 
+这里调用了前两步, 还没开始让worker工作
+
+- 给PIT初始化了**hrtimer**，初始化工作模式, 作为**PIT的时钟源**
 - 设置hrtimer中断处理函数为`pit_timer_fn`，注意该回调函数为原子操作不能被中断
 
 注: 这里没有启用hrtimer(`hrtimer_start`), 而且其实整个创建流程都没有启用hrtimer
@@ -433,9 +434,9 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 ```cpp
 static void destroy_pit_timer(struct kvm_pit *pit)
 {
-        // 去掉定时器, 定时器对象没有删除
+        // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
         hrtimer_cancel(&pit->pit_state.timer);
-        // 清理work
+        // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
         kthread_flush_work(&pit->expired);
 }
 ```
