--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -17,11 +17,14 @@
     - [3.2.3. 入口代码](#323-入口代码)
     - [3.2.4. kvm_create_pit(): 创建pit(8254)](#324-kvm_create_pit-创建pit8254)
       - [3.2.4.1. 初始化PIT的worker和work](#3241-初始化pit的worker和work)
-      - [3.2.4.2. 初始化PIT的定时器](#3242-初始化pit的定时器)
+      - [3.2.4.2. 初始化PIT的定时器hrtimer](#3242-初始化pit的定时器hrtimer)
       - [3.2.4.3. 重置pit](#3243-重置pit)
-- [4. 创建定时器](#4-创建定时器)
-    - [4.1. pit_timer_fn(): 中断流程](#41-pit_timer_fn-中断流程)
-- [5. 参考](#5-参考)
+  - [3.3. 创建定时器](#33-创建定时器)
+    - [整体流程](#整体流程)
+    - [入口代码](#入口代码)
+    - [create_pit_timer(): 创建定时器](#create_pit_timer-创建定时器)
+    - [3.3.1. pit_timer_fn(): 中断流程](#331-pit_timer_fn-中断流程)
+- [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
 
@@ -341,7 +344,7 @@ worker主要函数有3个:
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
 - `kthread_flush_work()`: 用来在最后要停止worker的处理线程之前,保证所有的work都已经处理了
 
-#### 3.2.4.2. 初始化PIT的定时器
+#### 3.2.4.2. 初始化PIT的定时器hrtimer
 
 初始化一个高精准定时器，这个定时器就作为我们**虚拟时钟的时钟源**, 然而定时器的物理时钟源根据不同的硬件而不同
 
@@ -350,7 +353,7 @@ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);
 pit_state->timer.function = pit_timer_fn;
 ```
 
-这里调用了前两步, 还没开始让worker工作
+这里调用了前两步, 还没开始让worker工作(参见前面hrtimer的介绍)
 
 - 给PIT初始化了**hrtimer**，初始化工作模式, 作为**PIT的时钟源**
 - 设置hrtimer中断处理函数为`pit_timer_fn`，注意该回调函数为原子操作不能被中断
@@ -434,9 +437,10 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 ```cpp
 static void destroy_pit_timer(struct kvm_pit *pit)
 {
-        // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
+        // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作在当前流程也就没作用
         hrtimer_cancel(&pit->pit_state.timer);
-        // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
+        // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以在当前流程不涉及
+        // 清理超时的work
         kthread_flush_work(&pit->expired);
 }
 ```
@@ -449,9 +453,21 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-# 4. 创建定时器
+## 3.3. 创建定时器
+
+可以看到, 前面创建PIT没有真正创建定时器
 
 为什么会创建定时器，那是因为**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器。那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
+
+### 整体流程
+
+
+
+### 入口代码
+
+
+
+### create_pit_timer(): 创建定时器
 
 每个1ms产生一次中断, 这个是符合物理真实pit功能的
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
@@ -511,7 +527,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 1. 根据
 
-### 4.1. pit_timer_fn(): 中断流程
+### 3.3.1. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
@@ -573,5 +589,5 @@ static void pit_do_work(struct kthread_work *work)
 
 
 
-# 5. 参考
+# 4. 参考
 
