--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -20,10 +20,10 @@
       - [3.2.4.2. 初始化PIT的定时器hrtimer](#3242-初始化pit的定时器hrtimer)
       - [3.2.4.3. 重置pit](#3243-重置pit)
   - [3.3. 创建定时器](#33-创建定时器)
-    - [整体流程](#整体流程)
-    - [入口代码](#入口代码)
-    - [create_pit_timer(): 创建定时器](#create_pit_timer-创建定时器)
-    - [3.3.1. pit_timer_fn(): 中断流程](#331-pit_timer_fn-中断流程)
+    - [3.3.1. 整体流程](#331-整体流程)
+    - [3.3.2. 入口代码](#332-入口代码)
+    - [3.3.3. create_pit_timer(): 创建定时器](#333-create_pit_timer-创建定时器)
+    - [3.3.4. pit_timer_fn(): 中断流程](#334-pit_timer_fn-中断流程)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -457,17 +457,55 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 可以看到, 前面创建PIT没有真正创建定时器
 
-为什么会创建定时器，那是因为**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器。那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
+为什么会创建定时器，那是因为**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器。
 
-### 整体流程
+```cpp
+static const struct kvm_io_device_ops pit_dev_ops = {
+        .read     = pit_ioport_read,
+        .write    = pit_ioport_write,
+};
+```
+
+在前面创建pit中初始化了pit设备的读写函数.
+
+那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
+
+### 3.3.1. 整体流程
+
+```cpp
+kvm_vm_ioctl()  // vm ioctl的入口
+ ├─  kvm_arch_vm_ioctl()     
+ |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
+ |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
+ |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 分配irq source id
+ |   |   ├─ pid = get_pid(task_tgid(current)); // 
+ |   |   ├─ pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr); // 在cpu0上创建PIT的worker内核线程
+ |   |   ├─ kthread_init_work(&pit->expired, pit_do_work); // 超时work, pit_do_work用来向客户机注入时钟中断
+ |   |   ├─ hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS); // pit hrtimer的初始化, 这个高精准定时器就作为虚拟时钟的时钟源
+ |   |   ├─ it_state->timer.function = pit_timer_fn; // pit hrtimer的处理函数
+ |   |   ├─ pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq; // 时钟中断模拟ack
+ |   |   ├─ pit->mask_notifier.func = pit_mask_notifer; // 
+ |   |   ├─ kvm_pit_reset(pit); // 重置pit, 会创建pit定时器
+ |   |   |   ├─ for (i = 0; i < 3; i++) { // 3个通道
+ |   |   |   ├─ pit_load_count(pit, i, 0); // 
+ |   |   |   |   ├─ ps->channels[channel].count_load_time = ktime_get(); return; // 不是 通道0, 则获取时间然后直接返回
+ |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
+ |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
+ |   |   |   |       └─ kthread_flush_work(); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
+ |   |   |   ├─ } // 循环3次
+ |   |   |   └─ kvm_pit_reset_reinject(pit); // 
+ |   |   ├─ kvm_pit_set_reinject(pit, true); // 
+ |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
+ |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
+ |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker 设备的操作注册
+ |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
+```
+
+### 3.3.2. 入口代码
 
 
 
-### 入口代码
-
-
-
-### create_pit_timer(): 创建定时器
+### 3.3.3. create_pit_timer(): 创建定时器
 
 每个1ms产生一次中断, 这个是符合物理真实pit功能的
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
@@ -527,7 +565,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 1. 根据
 
-### 3.3.1. pit_timer_fn(): 中断流程
+### 3.3.4. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
