--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -5,8 +5,7 @@
 
 - [1. 硬件基础](#1-硬件基础)
 - [2. Time Tick](#2-time-tick)
-  - [2.1. 物理环境下的timer](#21-物理环境下的timer)
-  - [2.2. 虚拟化下的timer](#22-虚拟化下的timer)
+- [2.2. 虚拟化时钟](#22-虚拟化时钟)
 - [3. PIT(8254)模拟](#3-pit8254模拟)
   - [3.1. 相关结构体](#31-相关结构体)
     - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
@@ -19,11 +18,12 @@
       - [3.2.4.1. 初始化PIT的worker和work](#3241-初始化pit的worker和work)
       - [3.2.4.2. 初始化PIT的定时器hrtimer](#3242-初始化pit的定时器hrtimer)
       - [3.2.4.3. 重置pit](#3243-重置pit)
+  - [pit的time tick](#pit的time-tick)
   - [3.3. 创建定时器](#33-创建定时器)
     - [3.3.1. 整体流程](#331-整体流程)
-    - [3.3.2. 入口代码](#332-入口代码)
-    - [3.3.3. create_pit_timer(): 创建定时器](#333-create_pit_timer-创建定时器)
-    - [3.3.4. pit_timer_fn(): 中断流程](#334-pit_timer_fn-中断流程)
+    - [入口代码](#入口代码)
+    - [create_pit_timer(): 创建定时器](#create_pit_timer-创建定时器)
+    - [3.3.1. pit_timer_fn(): 中断流程](#331-pit_timer_fn-中断流程)
 - [4. 参考](#4-参考)
 
 <!-- /code_chunk_output -->
@@ -41,13 +41,11 @@
 
 # 2. Time Tick
 
-## 2.1. 物理环境下的timer
-
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
 普通情况下，**OS Time Tick**由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
 
-- PIT(i8254)定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
+- PIT(i8254)定期(**每1ms**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
 
 两者电子线路连接不同:
@@ -61,11 +59,11 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 - 一次性触发`one-shot`
 - `TSC-Deadline`模式(最新的CPU里面支持)。
 
-## 2.2. 虚拟化下的timer
+# 2.2. 虚拟化时钟
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
-模拟的**PIT**和**APIC Timer**不能像真正硬件那样**物理计时**，所以一般用**HOST的某种系统服务**或**软件计时器**来为这个模拟 PIT 提供模拟”**时钟源**”。
+模拟的**PIT**和**APIC Timer**不能像真正硬件那样**物理计时**，所以一般用**HOST的某种系统服务**或**软件计时器**来为这个模拟 PIT/APIC Timer 提供模拟”**时钟源**”。
 
 目前两种方案：1. **用户态模拟方案**（QEMU）； 2. **内核态模拟方案**（KVM）；
 
@@ -73,9 +71,7 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这几个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
-kvm支持的时钟有8254, local apic timer,kvmclock等
-
-这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
+kvm支持的时钟有8254, local apic timer, kvmclock等
 
 # 3. PIT(8254)模拟
 
@@ -434,6 +430,8 @@ static void pit_load_count(struct kvm_pit *pit, int channel, u32 val)
 }
 ```
 
+调用`destroy_pit_timer()`使PIT的timer(定时器)无效
+
 ```cpp
 static void destroy_pit_timer(struct kvm_pit *pit)
 {
@@ -452,6 +450,14 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 - 第二种情况，定时器还在红黑树中，那么把它**从红黑树中移出**。由于本文暂时只考虑高精度没有打开的情况，所以先不研究定时器正好排在红黑树第一个时的情况（即代码中调用hrtimer_force_reprogram函数的部分）。
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
+
+## pit的time tick
+
+pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
+
+不过在物理环境中, 很早
+
+从这里可以看到, 哪怕基于KVM的虚拟机也已经放弃了基于PIT的time tick, 
 
 ## 3.3. 创建定时器
 
@@ -501,11 +507,11 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
 ```
 
-### 3.3.2. 入口代码
+### 入口代码
 
 
 
-### 3.3.3. create_pit_timer(): 创建定时器
+### create_pit_timer(): 创建定时器
 
 每个1ms产生一次中断, 这个是符合物理真实pit功能的
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
@@ -565,7 +571,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 1. 根据
 
-### 3.3.4. pit_timer_fn(): 中断流程
+### 3.3.1. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
