--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -13,8 +13,8 @@
   - [2.4. LAPIC Timer: 本地时钟中断](#24-lapic-timer-本地时钟中断)
   - [2.5. HPET: 高精度时钟](#25-hpet-高精度时钟)
 - [3. 操作系统的时钟观](#3-操作系统的时钟观)
-  - [统计值和驱动事件](#统计值和驱动事件)
-  - [定时器](#定时器)
+  - [3.1. 统计值和驱动事件](#31-统计值和驱动事件)
+  - [3.2. 定时器](#32-定时器)
 
 <!-- /code_chunk_output -->
 
@@ -52,7 +52,7 @@ IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms*
 
 通过古老的8259pic 0号中断响应 `timer_interrupt` 这个中断处理函数
 
-PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代. 现在的Linux基本上不怎么用它. 说白了它就是个硬件实现的计数器系统，通过时钟中断来满足操作系统的定时器需求，通过写某些位来设置定时器，操作系统同时也要维护一套软件的定时器链表，与这个硬件链表进行对应
+PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代. 现在的Linux基本上不怎么用它. 说白了它就是个**硬件实现的计数器系统**，通过**时钟中断**来满足操作系统的**定时器需求**，通过写某些位来设置定时器，操作系统同时也要维护一套软件的定时器链表，与这个硬件链表进行对应
 
 PIT支持**周期性**和**单次计时**两种方式.
 
@@ -122,14 +122,14 @@ HPET支持**周期性**和**单次计时**两种工作方式。
 
 从操作系统角度看, **时钟作用**可以分为如下两类.
 
-## 统计值和驱动事件
+## 3.1. 统计值和驱动事件
 
 ⓵ 提供**统计值**及**驱动事件**: 
 
 - 提供**统计值**是指操作系统用时钟来**维护一些必需的数据**, 例如一个**进程**在**用户态/内核态的时间**, 系统的日期、时间等. 
 - **驱动事件**是指**驱动以时间为资源的程序！！！**, 典型就是进程. 例如, 分时操作系统为**每个进程分配固定的时间片**, 调度时间片耗尽的进程睡眠, 唤醒分配到新时间片的进程运行.
 
-## 定时器
+## 3.2. 定时器
 
 ⓶ **维护定时器(Timer**): 定时器是程序中常用的组件, 用于在某个指定时间到达后执行特定的操作. 定时器大量运用于操作系统中, 例如内核为I/O操作注册的超时定时器、操作系统提供给应用程序使用的定时器接口等. 见图2\-19.
 
