--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -5,26 +5,26 @@
 
 - [1. 硬件基础](#1-硬件基础)
 - [2. Time Tick](#2-time-tick)
-- [2.2. 虚拟化时钟](#22-虚拟化时钟)
-- [3. PIT(8254)模拟](#3-pit8254模拟)
-  - [3.1. 相关结构体](#31-相关结构体)
-    - [3.1.1. struct kvm_pit: pit芯片](#311-struct-kvm_pit-pit芯片)
-    - [3.1.2. struct hrtimer](#312-struct-hrtimer)
-  - [3.2. 初始化虚拟PIT](#32-初始化虚拟pit)
-    - [3.2.1. QEMU](#321-qemu)
-    - [3.2.2. 整体流程](#322-整体流程)
-    - [3.2.3. 入口代码](#323-入口代码)
-    - [3.2.4. kvm_create_pit(): 创建pit(8254)](#324-kvm_create_pit-创建pit8254)
-      - [3.2.4.1. 初始化PIT的worker和work](#3241-初始化pit的worker和work)
-      - [3.2.4.2. 初始化PIT的定时器hrtimer](#3242-初始化pit的定时器hrtimer)
-      - [3.2.4.3. 重置pit](#3243-重置pit)
-  - [pit的time tick](#pit的time-tick)
-  - [3.3. 创建定时器](#33-创建定时器)
-    - [3.3.1. 整体流程](#331-整体流程)
-    - [入口代码](#入口代码)
-    - [create_pit_timer(): 创建定时器](#create_pit_timer-创建定时器)
-    - [3.3.1. pit_timer_fn(): 中断流程](#331-pit_timer_fn-中断流程)
-- [4. 参考](#4-参考)
+- [3. 虚拟化时钟](#3-虚拟化时钟)
+- [4. PIT(8254)模拟](#4-pit8254模拟)
+  - [4.1. 相关结构体](#41-相关结构体)
+    - [4.1.1. struct kvm_pit: pit芯片](#411-struct-kvm_pit-pit芯片)
+    - [4.1.2. struct hrtimer](#412-struct-hrtimer)
+  - [4.2. 初始化虚拟PIT](#42-初始化虚拟pit)
+    - [4.2.1. QEMU](#421-qemu)
+    - [4.2.2. 整体流程](#422-整体流程)
+    - [4.2.3. 入口代码](#423-入口代码)
+    - [4.2.4. kvm_create_pit(): 创建pit(8254)](#424-kvm_create_pit-创建pit8254)
+      - [4.2.4.1. 初始化PIT的worker和work](#4241-初始化pit的worker和work)
+      - [4.2.4.2. 初始化PIT的定时器hrtimer](#4242-初始化pit的定时器hrtimer)
+      - [4.2.4.3. 重置pit](#4243-重置pit)
+  - [4.3. pit的time tick和timer](#43-pit的time-tick和timer)
+  - [4.4. 创建定时器](#44-创建定时器)
+    - [4.4.1. 整体流程](#441-整体流程)
+    - [4.4.2. 入口代码](#442-入口代码)
+    - [4.4.3. create_pit_timer(): 创建定时器](#443-create_pit_timer-创建定时器)
+    - [4.4.4. pit_timer_fn(): 中断流程](#444-pit_timer_fn-中断流程)
+- [5. 参考](#5-参考)
 
 <!-- /code_chunk_output -->
 
@@ -59,7 +59,7 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 - 一次性触发`one-shot`
 - `TSC-Deadline`模式(最新的CPU里面支持)。
 
-# 2.2. 虚拟化时钟
+# 3. 虚拟化时钟
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
 
@@ -73,15 +73,15 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 
 kvm支持的时钟有8254, local apic timer, kvmclock等
 
-# 3. PIT(8254)模拟
+# 4. PIT(8254)模拟
 
 Programmable Interval Timer, **可编程中断/间隔时钟**
 
 KVM很多设备都是使用QEMU进行模拟的, 但是时钟已经在KVM重做了, 为了提升性能.
 
-## 3.1. 相关结构体
+## 4.1. 相关结构体
 
-### 3.1.1. struct kvm_pit: pit芯片
+### 4.1.1. struct kvm_pit: pit芯片
 
 ```cpp
 struct kvm_kpit_channel_state {
@@ -138,7 +138,7 @@ struct kvm_pit {
 };
 ```
 
-### 3.1.2. struct hrtimer
+### 4.1.2. struct hrtimer
 
 hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Linux一般用这个来计算ticker, 定时器的真实物理时钟源根据不同的硬件而不同
 
@@ -156,11 +156,11 @@ hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Lin
 
 详细参见`Linux/Time`
 
-## 3.2. 初始化虚拟PIT
+## 4.2. 初始化虚拟PIT
 
 真实物理pit有3个通道, 虚拟的PIT其实也是要符合这个设定, 进行全功能模拟, 所以一定要先看下PIT的功能描述.
 
-### 3.2.1. QEMU
+### 4.2.1. QEMU
 
 PIT创建:
 
@@ -170,7 +170,7 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-### 3.2.2. 整体流程
+### 4.2.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -201,7 +201,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
 ```
 
-### 3.2.3. 入口代码
+### 4.2.3. 入口代码
 
 ```cpp
 case KVM_CREATE_PIT:
@@ -228,7 +228,7 @@ create_pit_unlock:
 
 创建pit并赋值给 `kvm->arch.vpit`
 
-### 3.2.4. kvm_create_pit(): 创建pit(8254)
+### 4.2.4. kvm_create_pit(): 创建pit(8254)
 
 ```cpp
 struct kvm_pit *kvm_create_pit(struct kvm *kvm, u32 flags)
@@ -324,7 +324,7 @@ fail_request:
 
 从这里可以得出一个结论，**没有真正的时钟源**，是**没有办法模拟时钟的**。而关键就在于**时钟中断**，有了时钟中断，其他的**定时器计数**都可以通过**软件来实现**，所以在i8254.c里面的其他代码基本上是怎么实现模拟定时器的。
 
-#### 3.2.4.1. 初始化PIT的worker和work
+#### 4.2.4.1. 初始化PIT的worker和work
 
 ```cpp
 pit->worker = kthread_create_worker(0, "kvm-pit/%d", pid_nr);
@@ -340,7 +340,7 @@ worker主要函数有3个:
 - `kthread_queue_work(pool->worker, &pool->work);`: 将这个work添加到worker的工作队列, 让worker开始工作
 - `kthread_flush_work()`: 用来在最后要停止worker的处理线程之前,保证所有的work都已经处理了
 
-#### 3.2.4.2. 初始化PIT的定时器hrtimer
+#### 4.2.4.2. 初始化PIT的定时器hrtimer
 
 初始化一个高精准定时器，这个定时器就作为我们**虚拟时钟的时钟源**, 然而定时器的物理时钟源根据不同的硬件而不同
 
@@ -358,7 +358,7 @@ pit_state->timer.function = pit_timer_fn;
 
 由此可见, 所以**内核虚拟PIT**实际是利用**HOST**的**hrtimer实际时钟源**来提供**虚拟时钟**的。 
 
-#### 3.2.4.3. 重置pit
+#### 4.2.4.3. 重置pit
 
 ```cpp
 static void kvm_pit_reset(struct kvm_pit *pit)
@@ -451,19 +451,21 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-## pit的time tick
+## 4.3. pit的time tick和timer
 
 pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
-不过在物理环境中, 很早
+不过在linux中, 已经被高精度时钟取代了, 所以可以看到, 哪怕基于KVM的虚拟机也已经**放弃**了基于PIT的**time tick**.
 
-从这里可以看到, 哪怕基于KVM的虚拟机也已经放弃了基于PIT的time tick, 
+目前仅仅保留了计数器系统, 通过**时钟中断**来满足程序的**定时器需求**.
 
-## 3.3. 创建定时器
+## 4.4. 创建定时器
 
-可以看到, 前面创建PIT没有真正创建定时器
+可以看到, 因为取消了基于PIT的time tick功能, 所以前面创建PIT没有真正创建定时器.
 
-为什么会创建定时器，那是因为**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器。
+那什么时候创建定时器?
+
+当guest os通过寄存器操作启动一个时钟控制器时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
 
 ```cpp
 static const struct kvm_io_device_ops pit_dev_ops = {
@@ -476,7 +478,7 @@ static const struct kvm_io_device_ops pit_dev_ops = {
 
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
-### 3.3.1. 整体流程
+### 4.4.1. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -507,11 +509,11 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
 ```
 
-### 入口代码
+### 4.4.2. 入口代码
 
 
 
-### create_pit_timer(): 创建定时器
+### 4.4.3. create_pit_timer(): 创建定时器
 
 每个1ms产生一次中断, 这个是符合物理真实pit功能的
 此处注册的时间为**1ms一次**，并为**周期性**的；注册的中断处理函数`pit_timer_fn`;
@@ -571,7 +573,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 1. 根据
 
-### 3.3.1. pit_timer_fn(): 中断流程
+### 4.4.4. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
@@ -633,5 +635,5 @@ static void pit_do_work(struct kthread_work *work)
 
 
 
-# 4. 参考
+# 5. 参考
 
