--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -475,8 +475,24 @@ ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
                                 &pit->speaker_dev);
 ```
 
+查看虚拟机的ioports
 
+```
+[root@lihaiwei-vm ~]# cat /proc/ioports
+0000-0cf7 : PCI Bus 0000:00
+  0000-001f : dma1
+  0020-0021 : pic1
+  0040-0043 : timer0 // pit设备操作接口
+  0050-0053 : timer1
+  0060-0060 : keyboard
+  0064-0064 : keyboard
+  0070-0071 : rtc0
+  0080-008f : dma page reg
+  00a0-00a1 : pic2
+  ...
+```
 
+因为没有speaker, 所以看不到
 
 ## 5.3. pit的time tick和timer
 
@@ -492,7 +508,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 那什么时候创建定时器?
 
-当guest os通过寄存器操作启动一个时钟控制器时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
+当guest os通过**寄存器操作**启动时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
 
 ```cpp
 static const struct kvm_io_device_ops pit_dev_ops = {
