--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -506,7 +506,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 可以看到, 因为取消了基于PIT的time tick功能, 所以前面创建PIT没有真正创建定时器.
 
-那什么时候创建定时器?
+那什么时候创建定时器? 
 
 当guest os通过**寄存器操作**启动时, 即**客户机读写了8254的IO**，写了PIT channel的IO，说我需要一个定时器, 从而启动一个hrtimer来模拟**时钟中断源**.
 
@@ -518,6 +518,8 @@ static const struct kvm_io_device_ops pit_dev_ops = {
 ```
 
 在前面创建pit中初始化了pit设备的读写函数.
+
+PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated`
 
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
