--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -519,14 +519,14 @@ static const struct kvm_io_device_ops pit_dev_ops = {
 
 在前面创建pit中初始化了pit设备的读写函数.
 
-PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated`
+PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> emulator_pio_out_emulated() -> emulator_pio_in_out() -> kernel_pio() -> kvm_io_bus_write() -> __kvm_io_bus_write() -> kvm_iodevice_write() -> dev->ops->write()`, 详细见PIO部分内容
 
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
 ### 5.4.1. 整体流程
 
 ```cpp
-kvm_vm_ioctl()  // vm ioctl的入口
+pit_ioport_write()  // 写pit io入口
  ├─  kvm_arch_vm_ioctl()     
  |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
@@ -556,7 +556,83 @@ kvm_vm_ioctl()  // vm ioctl的入口
 
 ### 5.4.2. 入口代码
 
+```cpp
+static int pit_ioport_write(struct kvm_vcpu *vcpu,
+                                struct kvm_io_device *this,
+                            gpa_t addr, int len, const void *data)
+{
+        struct kvm_pit *pit = dev_to_pit(this);
+        struct kvm_kpit_state *pit_state = &pit->pit_state;
+        int channel, access;
+        struct kvm_kpit_channel_state *s;
+        u32 val = *(u32 *) data;
+        if (!pit_in_range(addr))
+                return -EOPNOTSUPP;
 
+        val  &= 0xff;
+        addr &= KVM_PIT_CHANNEL_MASK;
+
+        mutex_lock(&pit_state->lock);
+
+        if (val != 0)
+                pr_debug("write addr is 0x%x, len is %d, val is 0x%x\n",
+                         (unsigned int)addr, len, val);
+
+        if (addr == 3) {
+                channel = val >> 6;
+                if (channel == 3) {
+                        /* Read-Back Command. */
+                        for (channel = 0; channel < 3; channel++) {
+                                s = &pit_state->channels[channel];
+                                if (val & (2 << channel)) {
+                                        if (!(val & 0x20))
+                                                pit_latch_count(pit, channel);
+                                        if (!(val & 0x10))
+                                                pit_latch_status(pit, channel);
+                                }
+                        }
+                } else {
+                        /* Select Counter <channel>. */
+                        s = &pit_state->channels[channel];
+                        access = (val >> 4) & KVM_PIT_CHANNEL_MASK;
+                        if (access == 0) {
+                                pit_latch_count(pit, channel);
+                        } else {
+                                s->rw_mode = access;
+                                s->read_state = access;
+                                s->write_state = access;
+                                s->mode = (val >> 1) & 7;
+                                if (s->mode > 5)
+                                        s->mode -= 4;
+                                s->bcd = val & 1;
+                        }
+                }
+        } else {
+                /* Write Count. */
+                s = &pit_state->channels[addr];
+                switch (s->write_state) {
+                default:
+                case RW_STATE_LSB:
+                        pit_load_count(pit, addr, val);
+                        break;
+                case RW_STATE_MSB:
+                        pit_load_count(pit, addr, val << 8);
+                        break;
+                case RW_STATE_WORD0:
+                        s->write_latch = val;
+                        s->write_state = RW_STATE_WORD1;
+                        break;
+                case RW_STATE_WORD1:
+                        pit_load_count(pit, addr, s->write_latch | (val << 8));
+                        s->write_state = RW_STATE_WORD0;
+                        break;
+                }
+        }
+
+        mutex_unlock(&pit_state->lock);
+        return 0;
+}
+```
 
 ### 5.4.3. create_pit_timer(): 创建定时器
 
