--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -570,6 +570,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                 return -EOPNOTSUPP;
 
         val  &= 0xff;
+        // &0x3, 通道号
         addr &= KVM_PIT_CHANNEL_MASK;
 
         mutex_lock(&pit_state->lock);
@@ -577,7 +578,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         if (val != 0)
                 pr_debug("write addr is 0x%x, len is %d, val is 0x%x\n",
                          (unsigned int)addr, len, val);
-
+        
         if (addr == 3) {
                 channel = val >> 6;
                 if (channel == 3) {
