--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -526,9 +526,9 @@ PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> 
 ### 5.4.1. 整体流程
 
 ```cpp
-pit_ioport_write()  // 写pit io入口
- ├─  kvm_arch_vm_ioctl()     
- |   ├─ kvm->arch.vpit = kvm_create_pit(kvm, u.pit_config.flags);  // 创建pit, 赋值给kvm->arch.vpit
+handle_io()  // io vmexit入口
+ ├─ dev->ops->write()     
+ |   ├─ pit_ioport_write();  // 写pit io入口
  |   |   ├─ kzalloc(sizeof(struct kvm_pit), GFP_KERNEL_ACCOUNT);  // 给pit分配空间
  |   |   ├─ pit->irq_source_id = kvm_request_irq_source_id(kvm); // 分配irq source id
  |   |   ├─ pid = get_pid(task_tgid(current)); // 
@@ -561,6 +561,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
                                 struct kvm_io_device *this,
                             gpa_t addr, int len, const void *data)
 {
+        // 
         struct kvm_pit *pit = dev_to_pit(this);
         struct kvm_kpit_state *pit_state = &pit->pit_state;
         int channel, access;
@@ -578,7 +579,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
         if (val != 0)
                 pr_debug("write addr is 0x%x, len is %d, val is 0x%x\n",
                          (unsigned int)addr, len, val);
-        // 
+        // 通道3
         if (addr == 3) {
                 channel = val >> 6;
                 if (channel == 3) {
