--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -18,13 +18,13 @@
       - [5.2.4.1. 初始化PIT的worker和work](#5241-初始化pit的worker和work)
       - [5.2.4.2. 初始化PIT的定时器hrtimer](#5242-初始化pit的定时器hrtimer)
       - [5.2.4.3. 重置pit](#5243-重置pit)
-  - [注册pit设备和pio接口](#注册pit设备和pio接口)
-  - [5.3. pit的time tick和timer](#53-pit的time-tick和timer)
-  - [5.4. 创建定时器](#54-创建定时器)
-    - [5.4.1. 整体流程](#541-整体流程)
-    - [5.4.2. 入口代码](#542-入口代码)
-    - [5.4.3. create_pit_timer(): 创建定时器](#543-create_pit_timer-创建定时器)
-    - [5.4.4. pit_timer_fn(): 中断流程](#544-pit_timer_fn-中断流程)
+  - [5.3. 注册pit设备和pio接口](#53-注册pit设备和pio接口)
+  - [5.4. pit的time tick和timer](#54-pit的time-tick和timer)
+  - [5.5. 创建定时器](#55-创建定时器)
+    - [5.5.1. 整体流程](#551-整体流程)
+    - [5.5.2. 入口代码](#552-入口代码)
+    - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
+    - [5.5.4. pit_timer_fn(): 中断流程](#554-pit_timer_fn-中断流程)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -453,7 +453,7 @@ static void destroy_pit_timer(struct kvm_pit *pit)
 
 - 第三种情况删除失败，`hrtimer_cancel`函数会循环重试，等到定时器**执行完**的时候再删除。（这在多CPU系统中可能会发生)
 
-## 注册pit设备和pio接口
+## 5.3. 注册pit设备和pio接口
 
 ```cpp
 #define KVM_PIT_BASE_ADDRESS 0x40
@@ -495,7 +495,7 @@ ret = kvm_io_bus_register_dev(kvm, KVM_PIO_BUS,
 
 因为没有speaker, 所以看不到
 
-## 5.3. pit的time tick和timer
+## 5.4. pit的time tick和timer
 
 pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**产生**周期性的时钟中断信号！！！** 来充当**系统定时器**, 软件可以通过`0x40~0x43 I/O`端口进行操作. 
 
@@ -503,7 +503,7 @@ pit的原本语义中, 频率为**1000Hz左右**, 即**每次中断间隔约为1
 
 目前仅仅保留了计数器系统, 通过**时钟中断**来满足程序的**定时器需求**.
 
-## 5.4. 创建定时器
+## 5.5. 创建定时器
 
 可以看到, 因为取消了基于PIT的time tick功能, 所以前面创建PIT没有真正创建定时器.
 
@@ -524,7 +524,7 @@ PIT的操作属于Port IO, 整体流程是`handle_io() -> kvm_fast_pio_out() -> 
 
 那么我们在`pit_ioport_write`里面就需要分析这些IO，看用户是否需要创建定时器，如果需要就调用`create_pit_timer`函数创建一个PIT。
 
-### 5.4.1. 整体流程
+### 5.5.1. 整体流程
 
 ```cpp
 handle_io()  // io vmexit入口
@@ -539,21 +539,10 @@ handle_io()  // io vmexit入口
  |   |   |   ├─ kthread_flush_work(&pit->expired); // 清理pit超时的work
  |   |   |   ├─ ps->period = interval; // 设置pit的超时时间
  |   |   |   ├─ ps->is_periodic = is_period; // 是否周期触发
- |   |   |   └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用
- |   |   |   |   ├─ 
- |   |   |   |   └─ destroy_pit_timer(); // 使timer无效
- |   |   |   |       ├─ hrtimer_cancel(); // 取消一个正在排队定时器, 但是因为hrtimer没有start, 所以这个动作也就没作用
- |   |   |   |       └─ kthread_flush_work(&pit->expired); // 停止worker前, 保证所有work已完成, 因为pit的work没有执行, 所以不涉及
- |   |   |   ├─ } // 循环3次
- |   |   |   └─ kvm_pit_reset_reinject(pit); // 
- |   |   ├─ kvm_pit_set_reinject(pit, true); // 
- |   |   ├─ kvm_iodevice_init(&pit->dev, &pit_dev_ops); // 注册时钟的IO读写函数
- |   |   ├─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_PIT_BASE_ADDRESS, KVM_PIT_MEM_LENGTH, &pit->dev);// 注册时钟到bus总线上, PIO类型
- |   |   ├─ kvm_iodevice_init(&pit->speaker_dev, &speaker_dev_ops); // speaker 设备的操作注册
- |   |   └─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, KVM_SPEAKER_BASE_ADDRESS, 4, &pit->speaker_dev);   // 注册pit的speaker读写函数
+ |   |   |   └─ hrtimer_start(&ps->timer, ktime_add_ns(ktime_get(), interval), HRTIMER_MODE_ABS); // 启用pit的hrtimer定时器
 ```
 
-### 5.4.2. 入口代码
+### 5.5.2. 入口代码
 
 ```cpp
 static int pit_ioport_write(struct kvm_vcpu *vcpu,
@@ -637,7 +626,7 @@ static int pit_ioport_write(struct kvm_vcpu *vcpu,
 ```
 关于`pit_load_count()`查看上面的函数详细说明, 会调用`create_pit_timer`
 
-### 5.4.3. create_pit_timer(): 创建定时器
+### 5.5.3. create_pit_timer(): 创建定时器
 
 注册的中断处理函数`pit_timer_fn`;
 
@@ -695,10 +684,17 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 
 这里的`&ps->timer`是在pit初始化时候创建的, 
 
+这个函数也做了几件事情，可以总结如下2点：
 
-1. 根据
+1. 根据用户的需求，设置了一个**定时器**，作为**时钟中断触发的源头**。
+2. 清空定时器中断参数。
 
-### 5.4.4. pit_timer_fn(): 中断流程
+说白了时钟定时器创建就是初始化了时钟中断。 
+
+
+
+
+### 5.5.4. pit_timer_fn(): 中断流程
 
 虚拟PIT注册了一个高精度定时器，1ms周期，注册的定时器处理函数为：
 
