--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -682,7 +682,7 @@ static void create_pit_timer(struct kvm_pit *pit, u32 val, int is_period)
 }
 ```
 
-这里的`&ps->timer`是在pit初始化时候创建的, 
+这里的pit定时器`&ps->timer`是在pit初始化时候创建的, `hrtimer_init(&pit_state->timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS);`, 这里通过`hrtimer_start();`启用, 第二个参数是设置超时参数
 
 这个函数也做了几件事情，可以总结如下2点：
 
