--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -700,16 +700,18 @@ pit初始化时候也注册了定时器的中断处理函数`it_state->timer.fun
 ```cpp
 static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 {
+        // 得到pit
         struct kvm_kpit_state *ps = container_of(data, struct kvm_kpit_state, timer);
         struct kvm_pit *pt = pit_state_to_pit(ps);
-
+        //如果时钟中断需要重新注入，就直接累加
         if (atomic_read(&ps->reinject))
+                // 累加中断
                 atomic_inc(&ps->pending);
         // 将这个工作(work)挂载到worker(内核线程)的工作列表(work->list)
         // 让worker(pt->worker, 内核线程)开始工作(pt->expired)
         // 工作的处理函数是pt->expired->func
         kthread_queue_work(pt->worker, &pt->expired);
-
+        // 周期性的
         if (ps->is_periodic) {
                 hrtimer_add_expires_ns(&ps->timer, ps->period);
                 return HRTIMER_RESTART;
@@ -718,7 +720,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 }
 ```
 
-这里的work(工作)在`kvm_create_pit`函数里设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
+将超时work添加到工作线程, 这里的work(工作)在初始化pit中设置好（`kthread_init_work(&pit->expired, pit_do_work)`）
 
 ```cpp
 static void pit_do_work(struct kthread_work *work)
