--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -26,6 +26,7 @@
     - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
     - [5.5.4. pit_timer_fn(): 定时器中断函数](#554-pit_timer_fn-定时器中断函数)
     - [pit_do_work(): 时钟中断注入](#pit_do_work-时钟中断注入)
+    - [定时器的中断ack](#定时器的中断ack)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -765,7 +766,31 @@ static void pit_do_work(struct kthread_work *work)
 }
 ```
 
+中断注入流程见`中断虚拟化`部分.
+
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
+
+### 定时器的中断ack
+
+之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
+
+```cpp
+static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
+{
+        // 得到pit
+        struct kvm_kpit_state *ps = container_of(kian, struct kvm_kpit_state,
+                                                 irq_ack_notifier);
+        struct kvm_pit *pit = pit_state_to_pit(ps);
+        // 设置 ack 位
+        atomic_set(&ps->irq_ack, 1);
+        /* irq_ack should be set before pending is read.  Order accesses with
+         * inc(pending) in pit_timer_fn and xchg(irq_ack, 0) in pit_do_work.
+         */
+        smp_mb();
+        if (atomic_dec_if_positive(&ps->pending) > 0)
+                kthread_queue_work(pit->worker, &pit->expired);
+}
+```
 
 
 
