--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -25,9 +25,9 @@
     - [5.5.2. 入口代码](#552-入口代码)
     - [5.5.3. create_pit_timer(): 创建定时器](#553-create_pit_timer-创建定时器)
     - [5.5.4. pit_timer_fn(): 定时器中断函数](#554-pit_timer_fn-定时器中断函数)
-    - [pit_do_work(): 时钟中断注入](#pit_do_work-时钟中断注入)
-    - [定时器的中断ack](#定时器的中断ack)
-- [6. 参考](#6-参考)
+    - [5.5.5. pit_do_work(): 时钟中断注入](#555-pit_do_work-时钟中断注入)
+    - [5.5.6. 定时器的中断ack](#556-定时器的中断ack)
+- [kvmclock时钟虚拟化](#kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
 
@@ -731,7 +731,7 @@ static enum hrtimer_restart pit_timer_fn(struct hrtimer *data)
 
 如果定时器周期触发，则再次启动定时器，否则销毁, 详细看hrtimer的机制
 
-### pit_do_work(): 时钟中断注入
+### 5.5.5. pit_do_work(): 时钟中断注入
 
 当定时器将时钟中断pending增加，并且添加完工作队列以后，接着就触发下面的时钟中断注入，如果上一个中断被接收，接着触发下一个。
 
@@ -770,7 +770,7 @@ static void pit_do_work(struct kthread_work *work)
 
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
 
-### 定时器的中断ack
+### 5.5.6. 定时器的中断ack
 
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
@@ -781,19 +781,27 @@ static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
         struct kvm_kpit_state *ps = container_of(kian, struct kvm_kpit_state,
                                                  irq_ack_notifier);
         struct kvm_pit *pit = pit_state_to_pit(ps);
-        // 设置 ack 位
+        // 注入成功, 中断结束, 设置 ack 位
         atomic_set(&ps->irq_ack, 1);
         /* irq_ack should be set before pending is read.  Order accesses with
          * inc(pending) in pit_timer_fn and xchg(irq_ack, 0) in pit_do_work.
          */
         smp_mb();
+        // 注入成功后, 将中断累加器减1, 再判断累加器数量
+        // 中断累加器大于0, 说明还需要重新注入积累的中断
         if (atomic_dec_if_positive(&ps->pending) > 0)
+                // 将超时工作加入队列
                 kthread_queue_work(pit->worker, &pit->expired);
 }
 ```
 
+这样就成功的注入一个时钟中断并且有效的返回中断ack了。
+
+# kvmclock时钟虚拟化
+
+时间虚拟化的一种实现方式是通过时钟中断计数，进而换算得到，这种方式在虚拟机里存在问题，因为有时运行vpcu的cpu被调度出来使 时钟中断不能准时到达guest os。另外一种方式，如模拟HPET，guest os当需要的时候会去读当前的时间，这种方式会使得虚拟机频繁的VM-exit，影响性能。为此kvm引入了基于半虚拟化的时钟kvmclock,这种方式需要在guest上实现一个kvmclock驱动， 建立guest os 到VMM的通道， 这样通过这个通道guest os 向vmm 查询时间。
 
 
 
-# 6. 参考
+https://blog.csdn.net/wanthelping/article/details/47069085
 
