--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -28,6 +28,8 @@
     - [5.5.5. pit_do_work(): 时钟中断注入](#555-pit_do_work-时钟中断注入)
     - [5.5.6. 定时器的中断ack](#556-定时器的中断ack)
 - [APIC timer中断](#apic-timer中断)
+  - [相关结构体](#相关结构体)
+  - [创建和初始化虚拟定时器设备](#创建和初始化虚拟定时器设备)
 - [kvmclock时钟虚拟化](#kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
@@ -68,6 +70,8 @@ APIC Timer的模式APIC定时器包含**3种定时器模式**，
 kvm支持的时钟有rtc、8254pit、HPET、TSC、local apic timer, kvmclock等
 
 在虚拟化情况下，必须为**guest OS**模拟一个**PIT**和**APIC Timer**。
+
+qemu-kvm模拟**两个时钟中断设备**: **PIT**(i8254)和**APIC Timer**设备，也就是产生**中断源**。
 
 模拟的**PIT**和**APIC Timer**不能像真正硬件那样**物理计时**，所以一般用**HOST的某种系统服务**或**软件计时器**来为这个模拟 PIT/APIC Timer 提供模拟”**时钟源**”。
 
@@ -800,6 +804,15 @@ static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
 
 # APIC timer中断
 
+前面提到, APIC Timer的APIC定时器有3种定时器模式
+
+下面分析QEMU-KVM模拟APIC Timer周期触发(periodic)模式中断过程
+
+## 相关结构体
+
+## 创建和初始化虚拟定时器设备
+
+由于APIC Timer设备实际就是lapic的一个功能，所以在创建lapic设备同时，也就辅助设置了。
 
 
 # kvmclock时钟虚拟化
