--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 中断虚拟化.md
@@ -955,7 +955,7 @@ int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
 }
 ```
 
-这里我就不分析QEMU中的中断源了，毕竟主要将的是KVM
+这里我就不分析QEMU中的中断源了，毕竟主要讲的是KVM
 
 # 参考
 
