--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -128,8 +128,8 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
- |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer
- |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer回调函数
+ |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
+ |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer超时回调函数
  |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
  |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
  ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
@@ -160,9 +160,10 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
                 goto nomem_free_apic;
         }
         apic->vcpu = vcpu;
-        // 建立hrtimer, 回调函数 apic_timer_fn
+        // 建立hrtimer定时器, 回调函数 apic_timer_fn
         hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC,
                      HRTIMER_MODE_ABS_HARD);
+        // hrtimer定时器超时处理函数
         apic->lapic_timer.timer.function = apic_timer_fn;
         if (timer_advance_ns == -1) {
                 apic->lapic_timer.timer_advance_ns = LAPIC_TIMER_ADVANCE_NS_INIT;
