--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -27,10 +27,10 @@
     - [5.5.4. pit_timer_fn(): 定时器中断函数](#554-pit_timer_fn-定时器中断函数)
     - [5.5.5. pit_do_work(): 时钟中断注入](#555-pit_do_work-时钟中断注入)
     - [5.5.6. 定时器的中断ack](#556-定时器的中断ack)
-- [APIC timer中断](#apic-timer中断)
-  - [相关结构体](#相关结构体)
-  - [创建和初始化虚拟定时器设备](#创建和初始化虚拟定时器设备)
-- [kvmclock时钟虚拟化](#kvmclock时钟虚拟化)
+- [6. APIC timer中断](#6-apic-timer中断)
+  - [6.1. 相关结构体](#61-相关结构体)
+  - [6.2. 创建和初始化虚拟定时器设备](#62-创建和初始化虚拟定时器设备)
+- [7. kvmclock时钟虚拟化](#7-kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
 
@@ -771,7 +771,7 @@ static void pit_do_work(struct kthread_work *work)
 }
 ```
 
-中断注入流程见`中断虚拟化`部分.
+**中断注入**流程见`中断虚拟化`部分.
 
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
 
@@ -802,20 +802,20 @@ static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
 
 这样就成功的注入一个时钟中断并且有效的返回中断ack了。
 
-# APIC timer中断
+# 6. APIC timer中断
 
 前面提到, APIC Timer的APIC定时器有3种定时器模式
 
 下面分析QEMU-KVM模拟APIC Timer周期触发(periodic)模式中断过程
 
-## 相关结构体
+## 6.1. 相关结构体
 
-## 创建和初始化虚拟定时器设备
+## 6.2. 创建和初始化虚拟定时器设备
 
-由于APIC Timer设备实际就是lapic的一个功能，所以在创建lapic设备同时，也就辅助设置了。
+由于APIC Timer设备实际就是**lapic**的一个**功能**，所以在创建lapic设备同时，也就辅助设置了。
 
 
-# kvmclock时钟虚拟化
+# 7. kvmclock时钟虚拟化
 
 时间虚拟化的一种实现方式是通过时钟中断计数，进而换算得到，这种方式在虚拟机里存在问题，因为有时运行vpcu的cpu被调度出来使 时钟中断不能准时到达guest os。另外一种方式，如模拟HPET，guest os当需要的时候会去读当前的时间，这种方式会使得虚拟机频繁的VM-exit，影响性能。为此kvm引入了基于半虚拟化的时钟kvmclock,这种方式需要在guest上实现一个kvmclock驱动， 建立guest os 到VMM的通道， 这样通过这个通道guest os 向vmm 查询时间。
 
