--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -328,6 +328,23 @@ irr成员就是IRR寄存器。真实的ioapic没有irr寄存器吧???
 LAPIC是每个VCPU一个，由`kvm.vcpus[i].arch.apic`指向`kvm_lapic`结构体。
 
 ```cpp
+struct kvm_timer {
+        // 对应的hrtimer定时器
+        struct hrtimer timer;
+        // 触发周期
+        s64 period;                             /* unit: ns */
+        ktime_t target_expiration;
+        // 定时器模式
+        u32 timer_mode;
+        u32 timer_mode_mask;
+        u64 tscdeadline;
+        u64 expired_tscdeadline;
+        u32 timer_advance_ns;
+        s64 advance_expire_delta;
+        atomic_t pending;                       /* accumulated triggered timers */
+        bool hv_timer_in_use;
+};
+
 struct kvm_lapic {
         //GPA, Guest设置
         unsigned long base_address;
