--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -806,7 +806,7 @@ static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
 
 前面提到, APIC Timer的APIC定时器有3种定时器模式
 
-下面分析QEMU-KVM模拟APIC Timer周期触发(periodic)模式中断过程
+下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
 ## 6.1. 相关结构体
 
@@ -814,6 +814,22 @@ static void kvm_pit_ack_irq(struct kvm_irq_ack_notifier *kian)
 
 由于APIC Timer设备实际就是**lapic**的一个**功能**，所以在创建lapic设备同时，也就辅助设置了。
 
+```cpp
+int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
+{
+        ......
+        // 建立hrtimer定时器, 回调函数 apic_timer_fn
+        hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC,
+                     HRTIMER_MODE_ABS_HARD);
+        // hrtimer定时器超时处理函数
+        apic->lapic_timer.timer.function = apic_timer_fn;
+        ......
+}
+```
+
+该如何模拟APIC Timer设备呢？对于**周期性时钟中断**，我们可以采用**定时器方式**，**一定间隔**调用一次**中断源产生函数**，**模拟时钟中断发生**。
+
+首先创建一个**定时器**，然后初始化APIC Timer设备包括对设备的操作，设备属于哪个vcpu和vm,设备额产生中断的函数，实际就是定时器回调函数。
 
 # 7. kvmclock时钟虚拟化
 
