--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -129,7 +129,7 @@ kvm_arch_vcpu_create()  // vcpu创建中创建lapic
  |   ├─ vcpu->arch.apic = apic;  // 
  |   ├─ apic->regs = (void *)get_zeroed_page(GFP_KERNEL_ACCOUNT); //
  |   ├─ hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC, HRTIMER_MODE_ABS_HARD);  //初始化hrtimer定时器
- |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer超时回调函数
+ |   ├─ apic->lapic_timer.timer.function = apic_timer_fn;  // hrtimer定时器回调函数, 即APIC Timer设备产生中断的函数
  |   ├─ apic->lapic_timer.timer_advance_ns;  // advanced timer
  |   └─ kvm_iodevice_init(&apic->dev, &apic_mmio_ops);  // 
  ├─ kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
@@ -163,7 +163,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
         // 建立hrtimer定时器, 回调函数 apic_timer_fn
         hrtimer_init(&apic->lapic_timer.timer, CLOCK_MONOTONIC,
                      HRTIMER_MODE_ABS_HARD);
-        // hrtimer定时器超时处理函数
+        // hrtimer定时器回调函数, 即APIC Timer设备产生中断的函数
         apic->lapic_timer.timer.function = apic_timer_fn;
         if (timer_advance_ns == -1) {
                 apic->lapic_timer.timer_advance_ns = LAPIC_TIMER_ADVANCE_NS_INIT;
@@ -193,6 +193,8 @@ nomem:
 其中`hrtimer_init`是创建了一个时钟定时器，用来实现时钟的模拟
 
 因为**APIC Timer设备**实际就是lapic的一个功能，所以在创建lapic设备**同时创建**了。
+
+然后初始化APIC Timer设备产生中断的函数，实际就是定时器回调函数。
 
 
 
