--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/4. 时钟虚拟化.md
@@ -30,6 +30,7 @@
 - [6. APIC timer中断](#6-apic-timer中断)
   - [6.1. 相关结构体](#61-相关结构体)
   - [6.2. 创建和初始化虚拟定时器设备](#62-创建和初始化虚拟定时器设备)
+  - [启动定时器](#启动定时器)
 - [7. kvmclock时钟虚拟化](#7-kvmclock时钟虚拟化)
 
 <!-- /code_chunk_output -->
@@ -831,6 +832,29 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
+## 启动定时器
+
+启用上面的定时器, 产生调用回调函数
+
+```cpp
+// arch/x86/kvm/lapic.c
+static void start_apic_timer(struct kvm_lapic *apic)
+{
+        __start_apic_timer(apic, APIC_TMICT);
+}
+
+static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
+{
+        atomic_set(&apic->lapic_timer.pending, 0);
+
+        if ((apic_lvtt_period(apic) || apic_lvtt_oneshot(apic))
+            && !set_target_expiration(apic, count_reg))
+                return;
+
+        restart_apic_timer(apic);
+}
+
+```
 
 
 
