--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -334,7 +334,7 @@ struct kvm_timer {
         // 触发周期
         s64 period;                             /* unit: ns */
         ktime_t target_expiration;
-        // 定时器模式, apic timer 有
+        // 定时器模式, apic timer 有3种
         u32 timer_mode;
         u32 timer_mode_mask;
         u64 tscdeadline;
@@ -349,7 +349,7 @@ struct kvm_lapic {
         //GPA, Guest设置
         unsigned long base_address;
         struct kvm_io_device dev;
-        // 
+        // APIC timer(LVT功能)
         struct kvm_timer lapic_timer;
         u32 divide_count;
         struct kvm_vcpu *vcpu;
